[gd_scene load_steps=2 format=3 uid="uid://c30qtnd3vfwmr"]

[ext_resource type="Script" path="res://scripts/enemy/ai_fire_burst_forwards.gd" id="1_xvuty"]

[node name="AI_FireBurstForwards" type="Node"]
script = ExtResource("1_xvuty")
burstTiming = 0.25
burstSize = 10

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="timeout" from="CooldownTimer" to="." method="_on_timer_timeout"]
